--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "format": "prettier -w .",
     "test": "vitest run",
     "cli": "node dist/cli.js",
-    "mcp": "node dist/mcp.js",
-    "dashboard": "node dashboard/server.cjs"
+    "mcp": "node dist/mcp.js"
   },
   "dependencies": {
     "@fastify/helmet": "^13.0.0",
